Fix white background on mobile

--- a/app/src/index.css
+++ b/app/src/index.css
@@ -1,13 +1,16 @@
-body {
+* {
+  box-sizing: border-box;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  background-color: #111418;
+  overflow-x: hidden;
+  min-height: 100vh;
+}
+
+#root {
+  background-color: #111418;
+  min-height: 100vh;
 }
